--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@
     <p>You can see his open-source contributions on <a href="//github.com/coderabbi">github</a> and follow him on <a href="//twitter.com/coderabbi">twitter</a>; you may find him frequently in <a href="//webchat.freenode.net">FreenodeIRC</a>:#coderabbi.</p>
 </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
