--- a/faq/index.html
+++ b/faq/index.html
@@ -91,7 +91,7 @@ reach out to us</a> and tell us about your message.
         	</dl>
 </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
 
         <footer class="primary-footer">
