--- a/map/index.html
+++ b/map/index.html
@@ -56,7 +56,7 @@
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
-                <!--<li><a href="/map" class="active">Map</a></li>-->
+                <li><a href="/map" class="active">Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -66,7 +66,7 @@
 
     <div class="content">
         <div class="body">
-    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zHQDbgFAuLwo.kHqKzxb0VSpA" height="900" style="overflow:hidden;width:100%;border:3px solid #e8e8e8;border-radius:7px;"></iframe>
+    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zHQDbgFAuLwo.k6NkdkY0srIQ" height="900" style="overflow:hidden;width:100%;border:3px solid #e8e8e8;border-radius:7px;"></iframe>
 </div>
 <div class="outro">
     <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="/sponsorship">Sponsorship Prospectus</a>.</p>
