--- a/events/2015-02-20/index.html
+++ b/events/2015-02-20/index.html
@@ -58,7 +58,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
-                <!--<li><a href="/map" >Map</a></li>-->
+                <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
