--- a/events/index.html
+++ b/events/index.html
@@ -56,7 +56,7 @@
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" class="active">Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
-                <!--<li><a href="/map" >Map</a></li>-->
+                <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
