--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col-lg-12"><div class="sponsor-image-top one-col"">Your Logo Here</div><div class="sponsor-image-bottom titanium"  style="margin-bottom:15px">Benefactor</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top" style="padding-top:110px;padding-bottom:105px;font-weight:700;color:#F0F0F0;font-size:80px">TAKEN</div><div class="sponsor-image-bottom platinum">Partner</div></div>
         <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
