--- a/events/index.html
+++ b/events/index.html
@@ -155,7 +155,7 @@
 		</div>
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Brighton PHP User Group
-						<div class="appearance-details__location">Glasgow, Scotland</div>
+						<div class="appearance-details__location">Brighton, England</div>
 			<p class="appearance-details__title">Talk: TBD</p>
 		</div>
     </div>                        <div class="row appearance">
