--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -71,14 +71,14 @@
         <div class="col-lg-12"><div class="sponsor-image-top one-col">Your Logo Here</div><div class="sponsor-image-bottom titanium">Benefactor</div></div>
     </div>
     <div class="sponsor-grid row ">
+        <div class="col-lg-6"><div class="sponsor-image-top two-col" style="padding-top:81px; padding-bottom:80px"><a href="//forge.laravel.com/"><img src="/assets/img/sponsors/forge.svg"></a></div><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
+    </div>
+    <div class="sponsor-grid row">
         <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
         <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
-    </div>
-    <div class="sponsor-grid row">
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
@@ -89,13 +89,7 @@
         <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:69px; padding-bottom:70px"><img src="/assets/img/sponsors/benelux.png"></div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:89px; padding-bottom:89px"><img src="/assets/img/sponsors/confoo.gif"></div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:19px; padding-bottom:19px"><img src="/assets/img/sponsors/lonestar.png" style="height:170px"></div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
-    </div>
-    <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:2px; padding-bottom:6px;"><a href="//www.phparch.com/"><img src="/assets/img/sponsors/architect.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
@@ -107,10 +101,16 @@
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+    </div>
+    <div class="sponsor-grid row">
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:52px; padding-bottom:52px"><a href="//conference.phpbenelux.eu/2015/"><img src="/assets/img/sponsors/benelux.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:60px; padding-bottom:60px; padding-left:5px; padding-right:5px"><a href="//http://confoo.ca/"><img src="/assets/img/sponsors/confoo.gif"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//lonestarphp.com/"><img src="/assets/img/sponsors/lonestar.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//2015.midwestphp.org/"><img src="/assets/img/sponsors/midwest.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
@@ -123,16 +123,28 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-left:5px;padding-right:5px;"><a href="//securingphp.com"><img src="/assets/img/sponsors/securingphp.png"></a></div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:4px;padding-bottom:4px;"><a href="//nomadphp.com"><img src="/assets/img/sponsors/nomad.png" style="height:140px"></a></div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:6px;padding-bottom:6px;"><a href="//voicesoftheelephpant.com"><img src="/assets/img/sponsors/vote.gif" style="height:136px"></a></div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
     </div>
     <div class="sponsor-grid row">
         <div class="col-lg-2">
-            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-top six-col" style="padding-top:30px;padding-bottom:29px;"><a href="//daycamp4developers.com"><img src="/assets/img/sponsors/daycamp.png" style=""></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
