--- a/events/index.html
+++ b/events/index.html
@@ -160,6 +160,15 @@
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
+			February 17, 2015
+		</div>
+		<div class="col-md-9 appearance-details">
+						<p class="appearance-details__event">Warwickshire PHP User Group (UG Launch Event)
+						<div class="appearance-details__location">Warwickshire, England</div>
+			<p class="appearance-details__title">Talk: From London to Chicago: A Conceptual Map for Unit Testing</p>
+		</div>
+    </div>                        <div class="row appearance">
+		<div class="col-md-3 text-right appearance-date">
 			February 20, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
