--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -90,7 +90,7 @@
     </div>
     <div class="sponsor-grid row">
         <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:2px; padding-bottom:6px;"><a href="//www.phparch.com/"><img src="/assets/img/sponsors/architect.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:52px; padding-bottom:46px;"><a href="//intuit.be/"><img src="/assets/img/sponsors/in2it.png"></a></div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
         <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
@@ -111,7 +111,7 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:60px; padding-bottom:60px; padding-left:5px; padding-right:5px"><a href="//http://confoo.ca/"><img src="/assets/img/sponsors/confoo.gif"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//lonestarphp.com/"><img src="/assets/img/sponsors/lonestar.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:10px; padding-bottom:9px"><a href="//2015.midwestphp.org/"><img src="/assets/img/sponsors/midwest.png" style="height:130px"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col"style="padding-top:44px; padding-bottom:44px"><a href="//tek.phparch.com/"><img src="/assets/img/sponsors/tek.png" style=""></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
@@ -148,7 +148,7 @@
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
-            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-top six-col" style="padding-top:3px; padding-bottom:3px"><a href="//looselycoupled.info"><img src="/assets/img/sponsors/loosely.jpeg" style="height:143px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
@@ -166,6 +166,34 @@
         <div class="col-lg-2">
             <div class="sponsor-image-top six-col">Your Logo Here</div>
             <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+    </div>
+    <div class="sponsor-grid row">
+        <div class="col-lg-12">
+            <div class="community-top one-col">Community Sponsorships</div>
+            <div class="community-bottom">
+                <div class="col-lg-3 community-column">
+                    <ul class="circle">
+                        <li>Ed Michaels</li>
+                        <li>Tom Jones</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 community-column">
+                    <ul class="circle">
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 community-column">
+                    <ul class="circle">
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 community-column">
+                    <ul>
+                        <li class="circle"></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
