--- a/events/2015-04-16/index.html
+++ b/events/2015-04-16/index.html
@@ -76,12 +76,13 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript">
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('send', 'UA-58267958-1', 'pageview');
+    ga('create', 'UA-58267958-1', 'auto');
+    ga('send', 'pageview');
 </script>
 </body>
 </html>
