--- a/faqs/1-penguin/index.html
+++ b/faqs/1-penguin/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Contact Us &middot; Wisdom as a Service
+            Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -59,39 +59,13 @@
                 <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
-                <li><a href="/contact" class="active">Contact</a></li>
+                <li><a href="/contact" >Contact</a></li>
             </ul>
         </div>
     </header>
 
     <div class="content">
-        <div class="marquee">Contact Us</div>
-<div class="body standard-text">
-    Are you a:
-    <ul>
-        <li>Leader of a User Group that hopes to be included in the Tour?</li>
-        <li>Speaker interested in participating in one or more Tour events?</li>
-        <li>Representative of an organization that would like more information regarding sponsorship opportunities?</li>
-        <li>Developer that wants to join the conversation?</li>
-    </ul>
-    We would love to hear from you!  Please use the form below or contact us at <a href="mailto:info@wisdomworldtour.com" target="_top">info@wisdomworldtour.com</a>.
-    <form action="http://formspree.io/info@wisdomworldtour.com" method="POST" class="row contact">
-		<div class="form-group col-md-8">
-			<input type="text" class="form-control" placeholder="Name" name="_replyto" required>
-		</div>
-		<div class="form-group col-md-8">
-			<input type="email" class="form-control" placeholder="E-mail address" name="email" required>
-		</div>
-        <input type="hidden" name="_next" value="//wisdomworldtour.com/thank-you">
-        <input class="gotcha" type="text" name="_gotcha" style="display:none" />
-		<div class="form-group col-md-12">
-			<textarea class="form-control" rows="8" name="body" placeholder="Share what's on your mind..." required></textarea>
-		</div>
-		<div class="col-md-12">
-			<button type="submit" class="btn btn-default" value="Send">Submit</button>
-		</div>
-	</form>
-</div>
+        
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
