--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -148,7 +148,7 @@
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
-            <div class="sponsor-image-top six-col" style="padding-top:3px; padding-bottom:3px"><a href="//looselycoupled.info"><img src="/assets/img/sponsors/loosely.jpeg" style="height:143px"></a></div>
+            <div class="sponsor-image-top six-col" style="padding-top:3px; padding-bottom:3px"><a href="//looselycoupled.info"><img src="/assets/img/sponsors/loosely.jpg" style="height:143px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2">
@@ -180,17 +180,14 @@
                 </div>
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
-                        <li></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
-                        <li></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
-                    <ul>
-                        <li class="circle"></li>
+                    <ul class="circle">
                     </ul>
                 </div>
             </div>
@@ -208,12 +205,13 @@
 
 <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript">
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('send', 'UA-58267958-1', 'pageview');
+    ga('create', 'UA-58267958-1', 'auto');
+    ga('send', 'pageview');
 </script>
 </body>
 </html>
