--- a/events/index.html
+++ b/events/index.html
@@ -236,11 +236,20 @@ Talk: Inside Laravel 5.0
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
+			April 14, 2015
+		</div>
+		<div class="col-md-9 appearance-details">
+						<p class="appearance-details__event">Dallas PHP User Group
+						<div class="appearance-details__location">Dallas, Texas</div>
+			<p class="appearance-details__title">TBD</p>
+		</div>
+    </div>                        <div class="row appearance">
+		<div class="col-md-3 text-right appearance-date">
 			April 16, 2015
 		</div>
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">LoneStar PHP Conference
-						<div class="appearance-details__location">Dallas, Texas</div>
+						<div class="appearance-details__location">Addison, Texas</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer<br>
 Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 </p>
