--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -115,7 +115,7 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:2px; padding-bottom:3px"><a href="//karaniapp.com"><img src="/assets/img/sponsors/karani.png"></a></div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
@@ -129,7 +129,7 @@
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:4px;padding-bottom:4px;"><a href="//nomadphp.com"><img src="/assets/img/sponsors/nomad.png" style="height:140px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:4px;padding-bottom:4px;"><a href="//grumpy-learning.com"><img src="/assets/img/sponsors/grumpy.jpg" style="height:140px"></a></div>
             <div class="sponsor-image-bottom copper">Backer</div>
         </div>
         <div class="col-lg-2"><div class="sponsor-image-top six-col" style="padding-top:6px;padding-bottom:6px;"><a href="//voicesoftheelephpant.com"><img src="/assets/img/sponsors/vote.gif" style="height:136px"></a></div>
@@ -174,8 +174,6 @@
             <div class="community-bottom">
                 <div class="col-lg-3 community-column">
                     <ul class="circle">
-                        <li>Ed Michaels</li>
-                        <li>Tom Jones</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 community-column">
