--- a/events/index.html
+++ b/events/index.html
@@ -203,7 +203,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Milwaukee PHP User Group
 						<div class="appearance-details__location">Milwaukee, Wisconsin</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: Inside Laravel 5</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
@@ -212,7 +212,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Madison PHP User Group
 						<div class="appearance-details__location">Madison, Wisconsin</div>
-			<p class="appearance-details__title">Talk: TBD</p>
+			<p class="appearance-details__title">Talk: Inside Laravel 5</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
